--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body onload="loadMap()">
+<body onload="loadMap(); tooltip = document.querySelector('#country');">
     <div id="map"></div>
+    <div id="country"></div>
+    <div id="player"></div>
 </body>
 </html>
