--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body onload="loadMap(); tooltip = document.querySelector('#country');">
@@ -19,17 +20,15 @@
     <div id="player" class="filled-div">
         <div class="row">
             <div class="col-3">
-                <center>Hi</center>
+                <center><img style="height: 90px;" id="favicon" onerror="this.src='placeholder.png';"></center>
             </div>
+            <div class="col-3" id="info"></div>
             <div class="col-6">
-                <center>
-                    <button><i class="bi bi-skip-start-fill"></i></button>
-                    <button><i class="bi bi-play-fill"></i> / <i class="bi bi-pause-fill"></i></button>
-                    <button><i class="bi bi-skip-end-fill"></i></button>
-                </center>
-            </div>
-            <div class="col-3">
-                <center>Hi</center>
+                <button><i class="bi bi-skip-start-fill"></i></button>
+                <button><i class="bi bi-play-fill"></i> / <i class="bi bi-pause-fill"></i></button>
+                <button><i class="bi bi-skip-end-fill"></i></button><br>
+                <audio id="radio" src="" autoplay></audio><br>
+                <marquee id="station" style="width: 35%;">Click a station to continue</marquee>
             </div>
         </div>
     </div>
