--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <div id="player" class="filled-div">
         <div class="row">
             <div class="col-3">
-                <center><img style="height: 90px;" id="favicon" onerror="this.src='placeholder.png';"></center>
+                <center><img src="placeholder.png" id="favicon" onerror="this.src='placeholder.png';"></center>
             </div>
-            <div class="col-3" id="info"></div>
+            <div class="col-3" id="info">Click a station to continue</div>
             <div class="col-6">
                 <button><i class="bi bi-skip-start-fill"></i></button>
                 <button><i class="bi bi-play-fill"></i> / <i class="bi bi-pause-fill"></i></button>
