--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JamBox | Listen</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -17,8 +18,17 @@
 </head>
 <body onload="loadMap(); tooltip = document.querySelector('#country');">
     <div id="map"></div>
-    <div id="country" class="filled-div"></div>
+    <div id="top" class="filled-div">
+        <div class="row">
+            <div class="col-6">&nbsp;&nbsp;&nbsp;&nbsp;<img src="logo.png" style="height: 20px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>JamBox</b> (beta)</div>
+            <div class="col-6" style="text-align: right;">A project by <a href="https://jessewithoutani.github.io">Jesse Li</a></div>
+        </div>
+    </div>
     <div id="player" class="filled-div">
+        <div class="row">
+            <span id="country">--</span>
+        </div>
+        <hr>
         <div class="row">
             <div class="col-3">
                 <center><img src="placeholder.png" id="favicon" onerror="this.src='placeholder.png';"></center>
