Added flashing "live" icon

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
             </div>
             <div class="col-3" id="info">Find a station to continue</div>
             <div class="col-6">
-                <button><i class="bi bi-skip-start-fill"></i></button>
                 <button><i class="bi bi-play-fill"></i> / <i class="bi bi-pause-fill"></i></button>
-                <button><i class="bi bi-skip-end-fill"></i></button><br>
+                <button><i class="bi bi-music-note"></i></button>&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-broadcast flashing" style="color: #f00;"></i> <b>Live</b>
+                <br>
                 <audio id="radio" autoplay></audio><br>
                 <marquee id="station" style="width: 35%;">Find a station to continue</marquee>
             </div>
