removed cool button

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                     <h2 id="popup-title">Notice</h2>
                     <p id="popup-content"><b>JamBox</b> is currently in <span class="tag" style="background: #3b83a4;">BETA</span>, expect bugs and incomplete features.</p>
                     <button onclick="closePopup()">Got it</button>
-                    <button onclick="closePopup()">Kill yourself</button>
+                    <!-- <button onclick="closePopup()">Kill yourself</button> -->
                 </div>
             </div>
         </div>
